[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ui/inventory/Slot.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/inventory/inventory.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/slot1.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/xsprite.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/backdrop-Sheet.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/backdrop2.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/frame21.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/scroll_text.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Inventory" type="Node2D"]
position = Vector2( -0.999939, 4.00003 )
z_index = 1
script = ExtResource( 2 )

[node name="inventory_container" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -228.5
margin_right = 384.0
margin_bottom = 228.5
texture = ExtResource( 5 )
patch_margin_left = 29
patch_margin_top = 33
patch_margin_right = 26
patch_margin_bottom = 37
axis_stretch_horizontal = 1

[node name="title" type="NinePatchRect" parent="inventory_container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.0
margin_right = 79.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="inventory_container/title"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -10.0
margin_right = 31.0
margin_bottom = 21.0
text = "Inventory
"

[node name="closebutton" type="TextureButton" parent="inventory_container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )

[node name="LeftPanel" type="Control" parent="inventory_container"]

[node name="Label" type="Label" parent="inventory_container/LeftPanel"]
margin_left = 67.0
margin_top = 74.5
margin_right = 168.0
margin_bottom = 117.5
text = "Equipped Gems"

[node name="equipment_container" type="NinePatchRect" parent="inventory_container/LeftPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 55.0
margin_top = 52.5
margin_right = 398.0
margin_bottom = 263.5
texture = ExtResource( 6 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Panel5" type="Panel" parent="inventory_container/LeftPanel/equipment_container"]
margin_left = 148.0
margin_top = 23.0
margin_right = 180.0
margin_bottom = 55.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Panel6" type="Panel" parent="inventory_container/LeftPanel/equipment_container"]
margin_left = 202.0
margin_top = 120.0
margin_right = 234.0
margin_bottom = 152.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Panel7" type="Panel" parent="inventory_container/LeftPanel/equipment_container"]
margin_left = 92.0
margin_top = 120.0
margin_right = 124.0
margin_bottom = 152.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Panel8" type="Panel" parent="inventory_container/LeftPanel/equipment_container"]
margin_left = 148.0
margin_top = 155.0
margin_right = 180.0
margin_bottom = 187.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Panel9" type="Panel" parent="inventory_container/LeftPanel/equipment_container"]
margin_left = 91.0
margin_top = 63.0
margin_right = 123.0
margin_bottom = 95.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Panel10" type="Panel" parent="inventory_container/LeftPanel/equipment_container"]
margin_left = 203.0
margin_top = 65.0
margin_right = 235.0
margin_bottom = 97.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="curr_equipped2" type="NinePatchRect" parent="inventory_container/LeftPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 60.0
margin_top = 270.0
margin_right = 396.0
margin_bottom = 412.0
texture = ExtResource( 6 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="inventory_container/LeftPanel/curr_equipped2"]
margin_left = 20.0
margin_top = 18.5
margin_right = 60.0
margin_bottom = 32.5
text = "Gem Effects"

[node name="RichTextLabel" type="RichTextLabel" parent="inventory_container/LeftPanel/curr_equipped2"]
margin_left = 23.0
margin_top = 34.0
margin_right = 320.0
margin_bottom = 131.0

[node name="RightPanel" type="Control" parent="inventory_container"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -437.0
margin_top = -227.0
margin_right = -437.0
margin_bottom = -227.0

[node name="NinePatchRect" type="NinePatchRect" parent="inventory_container/RightPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 72.0
margin_top = 53.0
margin_right = 397.0
margin_bottom = 411.0
texture = ExtResource( 6 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 16
patch_margin_bottom = 16

[node name="inventory_container" type="GridContainer" parent="inventory_container/RightPanel/NinePatchRect"]
margin_left = 23.0
margin_top = 17.0
margin_right = 289.0
margin_bottom = 334.0
columns = 8

[node name="Slot" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot2" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot3" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot4" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot5" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot6" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot7" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot8" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot9" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot10" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot11" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot12" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot13" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_top = 36.0
margin_right = 176.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot14" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_top = 36.0
margin_right = 212.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot15" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_top = 36.0
margin_right = 248.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot16" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_top = 36.0
margin_right = 284.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot17" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot18" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot19" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot20" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot21" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_top = 72.0
margin_right = 176.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot22" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_top = 72.0
margin_right = 212.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot23" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_top = 72.0
margin_right = 248.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot24" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_top = 72.0
margin_right = 284.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot25" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot26" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot27" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot28" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_top = 108.0
margin_right = 140.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot29" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_top = 108.0
margin_right = 176.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot30" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_top = 108.0
margin_right = 212.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot31" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_top = 108.0
margin_right = 248.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot32" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_top = 108.0
margin_right = 284.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot33" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot34" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_top = 144.0
margin_right = 68.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot35" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_top = 144.0
margin_right = 104.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot36" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_top = 144.0
margin_right = 140.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot37" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_top = 144.0
margin_right = 176.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot38" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_top = 144.0
margin_right = 212.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot39" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_top = 144.0
margin_right = 248.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot40" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_top = 144.0
margin_right = 284.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot41" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_top = 180.0
margin_right = 32.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot42" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_top = 180.0
margin_right = 68.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot43" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_top = 180.0
margin_right = 104.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot44" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_top = 180.0
margin_right = 140.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot45" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_top = 180.0
margin_right = 176.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot46" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_top = 180.0
margin_right = 212.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot47" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_top = 180.0
margin_right = 248.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot48" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_top = 180.0
margin_right = 284.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot49" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_top = 216.0
margin_right = 32.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot50" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_top = 216.0
margin_right = 68.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot51" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_top = 216.0
margin_right = 104.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot52" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_top = 216.0
margin_right = 140.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot53" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_top = 216.0
margin_right = 176.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot54" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_top = 216.0
margin_right = 212.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot55" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_top = 216.0
margin_right = 248.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot56" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_top = 216.0
margin_right = 284.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot57" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_top = 252.0
margin_right = 32.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot58" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_top = 252.0
margin_right = 68.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot59" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_top = 252.0
margin_right = 104.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot60" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_top = 252.0
margin_right = 140.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot61" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_top = 252.0
margin_right = 176.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot62" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_top = 252.0
margin_right = 212.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot63" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_top = 252.0
margin_right = 248.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot64" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_top = 252.0
margin_right = 284.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot65" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_top = 288.0
margin_right = 32.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot66" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 36.0
margin_top = 288.0
margin_right = 68.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot67" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 72.0
margin_top = 288.0
margin_right = 104.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot68" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 108.0
margin_top = 288.0
margin_right = 140.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot69" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 144.0
margin_top = 288.0
margin_right = 176.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot70" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 180.0
margin_top = 288.0
margin_right = 212.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot71" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 216.0
margin_top = 288.0
margin_right = 248.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="Slot72" type="Panel" parent="inventory_container/RightPanel/NinePatchRect/inventory_container"]
margin_left = 252.0
margin_top = 288.0
margin_right = 284.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[connection signal="equipment_updated" from="inventory_container/LeftPanel/equipment_container/Panel5" to="." method="_on_Panel5_equipment_updated"]
[connection signal="equipment_updated" from="inventory_container/LeftPanel/equipment_container/Panel6" to="." method="_on_Panel6_equipment_updated"]
[connection signal="equipment_updated" from="inventory_container/LeftPanel/equipment_container/Panel7" to="." method="_on_Panel7_equipment_updated"]
[connection signal="equipment_updated" from="inventory_container/LeftPanel/equipment_container/Panel8" to="." method="_on_Panel8_equipment_updated"]
[connection signal="equipment_updated" from="inventory_container/LeftPanel/equipment_container/Panel9" to="." method="_on_Panel9_equipment_updated"]
[connection signal="equipment_updated" from="inventory_container/LeftPanel/equipment_container/Panel10" to="." method="_on_Panel10_equipment_updated"]
